--- a/sass/main.css
+++ b/sass/main.css
@@ -214,7 +214,6 @@ a, button:not(aside button, .items button, header button) {
 @media (min-width: 1024px) {
   a, button:not(aside button, .items button, header button) {
     font-size: 13px;
-    letter-spacing: 1px;
     padding: 0.9375rem 1.9375rem;
   }
 }
@@ -227,7 +226,8 @@ a.btnOrange:hover, button:not(aside button, .items button, header button).btnOra
   background-color: #fbaf85;
 }
 a.btnDarkGrey, button:not(aside button, .items button, header button).btnDarkGrey {
-  color: #979797;
+  color: #000;
+  opacity: 50%;
   font-weight: 600;
 }
 a.btnDarkGrey:hover, button:not(aside button, .items button, header button).btnDarkGrey:hover {
